Issue #5264 - Reworking test-distribution to use jetty-home
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>